@@ -1,4 +1,7 @@
 WebHelpers ChangeLog
 
 0.1.3
-* Fixed type in feedgenerator import, reported by tiksin@free.fr.
+* Fixed typo in feedgenerator import, reported by tiksin@free.fr.
+
+* Added ``webhelpers.rails.asset_tag``, for generating links to other assets
+  such as javascripts, stylesheets, and feeds.
